--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.LoginActivity"
         tools:targetApi="31">
         <activity
+            android:name=".SetTeamActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BattleActivity"
+            android:exported="false" />
+        <activity
             android:name=".AdminLandingPage"
             android:exported="false" />
         <activity
